Update privacy policy

--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -62,6 +62,8 @@
                 <b>The data is not being merged with any other data of you</b>
                 <h2>Cookies</h2>
                 OculusDB <b>only</b> uses cookies if you have logged in as an administrator so the server can authenticate you.
+                <br>
+                ComputerAnalytics uses cookies to give you an unique identifier which anonymises you in its database.
                 <h2>Additional information</h2>
                 The workings of the site can be checked any time as the source code is publicly available at <a href="https://github.com/ComputerElite/OculusDB">https://github.com/ComputerElite/OculusDB</a>
         </div>
