move above tabs

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -21,6 +21,10 @@
                     <div class="loader"></div>
                 </div>
             </div>
+            Don't forget to sign in on <a href="https://oculus.com">oculus.com</a> to be able to download everything (you must own it)
+            <br>
+            If you <b>get an error when downloading</b> you aren't signed in
+            <br>
             <div class="tabContainer">
                 <h2>Connected</h2>
                 <div class="tab">
@@ -189,11 +193,7 @@
             }
 
             function UpdateVersions(showAll) {
-                var vers = `Don't forget to sign in on <a href="https://oculus.com">oculus.com</a> to be able to download the game (you must own it)
-                <br>
-                If you <b>get an error when downloading</b> you aren't signed in
-                <br>
-                <label class="checkmarkContainer">Show all versions<input type='checkbox' onclick='UpdateVersions(${!showAll})'${showAll ? " checked" : ""}><span class="checkmark"></span></label>`
+                var vers = `<label class="checkmarkContainer">Show all versions<input type='checkbox' onclick='UpdateVersions(${!showAll})'${showAll ? " checked" : ""}><span class="checkmark"></span></label>`
                 connected.versions.forEach(v => {
                     if(downloadVersion && downloadVersion == v.version) {
                         DownloadVersionPopUp(v.version)
