Add right click context menu to copy url of version

--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -101,6 +101,7 @@
                 })
                 if(html == "") html = noActivity
                 activityContainer.innerHTML = html
+                UpdateContextMenu()
             }))
     </script>
 </body>
