--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -37,6 +37,7 @@
                 document.getElementById("lastUpdated").innerHTML = new Date(activity.__lastUpdated).toLocaleString()
                 document.getElementById("this").innerHTML = AutoFormat(activity, "", "activity")
                 RevealDescription("activity")
+                UpdateContextMenu()
             }).catch(err => {
                 if(err == 404) {
                     alert("The item has not been found")
