--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -58,6 +58,7 @@
                     })
                     if(apps == "") apps = noResult
                     results.innerHTML = apps
+                    UpdateContextMenu()
                 }))
 
             }
