improve download latest moddable button on Beat Saber quest

--- a/frontend/applicationspecific/2448060205267927.html
+++ b/frontend/applicationspecific/2448060205267927.html
@@ -9,7 +9,7 @@
             latest = arr.map( a => a.replace(/\d+/g, n => +n+100000 ) ).sort().map( a => a.replace(/\d+/g, n => +n-100000 ) ).reverse()[0]
             console.log(latest)
             if(params.get("downloadlatestmoddable"))
-                window.location.href = `?downloadversion=${latest}`
+                DownloadVersionPopUp(latest)
             var id = GetVersion(latest).id
             document.getElementById("latestVer").innerHTML = `<input type="button" onclick="DownloadVersion('${latest}')" style="font-size: 1.2em;" value="Download latest moddable version (${latest})" oncontextmenu="ContextMenuEnabled(event)" cmon-0="Copy download url" cmov-0="Copy(GetDownloadLink('${id}'))" cmon-1="Show Oculus Downgrader code" cmov-1="AndroidDownloadPopUp('2448060205267927','${id}', 'HOLLYWOOD')">`
         })
