--- a/frontend/home.html
+++ b/frontend/home.html
@@ -33,7 +33,7 @@
                 <br>
                 If you have experience in designing pictograms or logos I'd be happy if you hit me up on Discord as I want to add a few pictograms here and there. To message me join the <a href="https://discord.gg/MrwMx5e">Beat Saber Legacy Group Discord Server</a>.
                 <h3>Api</h3>
-                OculusDB has an api anyone is allowed to use. You can find it <a href="https://oculusdb.rui2015.me/api/docs">here</a>.
+                OculusDB has an api anyone is allowed to use. You can find it <a href="https://oculusdb.rui2015.me/api/v1/docs">here</a>.
             </div>
         </div>
         <script src="/script.js"></script>
