--- a/frontend/server.html
+++ b/frontend/server.html
@@ -42,7 +42,7 @@
 
             function Format(res) {
                 var links = []
-                const websiteRegex = /https?\:\/\/([^ ()\n\t]+(\/)?)/g
+                const websiteRegex = /https?\:\/\/([^ ()\n\t<>]+(\/)?)/g
                 while ((match = websiteRegex.exec(res)) !== null) {
                     var replacement = `<a href="${match[0]}" target="_blank">${match[0]}</a>`
                     links.push({
