change oculus.com link

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -21,7 +21,7 @@
                     <div class="loader"></div>
                 </div>
             </div>
-            Don't forget to sign in on <a href="https://oculus.com">oculus.com</a> to be able to download everything (you must own it)
+            Don't forget to sign in on <a href="https://oculus.com/experiences/quest">oculus.com</a> to be able to download everything (you must own it)
             <br>
             If you <b>get an error when downloading</b> you aren't signed in
             <br>
