--- a/frontend/guidequest.html
+++ b/frontend/guidequest.html
@@ -12,7 +12,7 @@
             <h2>Downgrading quest games</h2>
             
             <h3>1. Log in on oculus.com</h3>
-            Simply open <a href="{oculusloginlink}">oculus.com</a> and log in with your Oculus or Facebook account. After you logged in you can close that tab.
+            Simply open <a href="{oculusloginlink}">oculus.com</a> and log in with your Oculus or Facebook account. After you logged in, you can close that tab.
             <br>
             <br>
             <h3>2. Search the game you want to downgrade</h3>
